# ScheduleMaker

./: CMakeLists.txt  Lesson.h  Schedule.cpp  Schedule.h  ScheduleConverter.cpp  ScheduleConverter.h  ScheduleJSONConverter.cpp  ScheduleJSONConverter.h  ScheduleXLSXConverter.cpp  ScheduleXLSXConverter.h  ScheduleXMLConverter.cpp  ScheduleXMLConverter.h  Teacher.h  input.txt  lesson_class.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  s.xlsx  teacher_class.h
installer/: mk.cmd
lib/: OpenXLSX-Exports.hpp
model/: Schedule.cpp  Schedule.h  ScheduleXLSXConverter.cpp  ScheduleXLSXConverter.h  Teacher.h
ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
